src/app/central-section/guess-bar/guess-bar.component.css
.bar_and_button_master {
  display: block;
  position: absolute;
  left: 0;
  top: 78%;
  width: 100%;
  height: 20%;
}

.animated_number_going_up_parent {
  display: block;
  position: relative;
  width: 100%;
  height: 25%;
  overflow: hidden;
}

.animated_number_going_up {
  display: block;
  position: absolute;
  top: 0;
  width: 100%;
  opacity: 0;
  animation-name: animated_number_going_up_animation;
  animation-duration: .6s;

  font-family: 'Secular One', sans-serif;
  text-align: center;
  font-size: 4vh;
  color: white;
  text-shadow: 0 0 4px black;
  line-height: 100%;
}
@keyframes animated_number_going_up_animation {
  0% {opacity: 0; top: 100%;}
  50% {opacity: 1; top: 0;}
  70% {opacity: 1; top: 0;}
  100% {opacity: 0; top: 0;}
}

.guess_bar_parent {
  display: block;
  position: relative;
  width: 100%;
  height: 20%;
  overflow: hidden;
}

.guess {
  display: inline-block;
  position: relative;
  height: 100%;
  vertical-align: top;
  border-radius: 2vh;
  transition: .3s ease;

  font-family: 'Secular One', sans-serif;
  font-size: 2vh;
  text-align: center;
  color: white;
  line-height: 1.7em;
}

.guess_letter {
  font-size: 2.5vh;
}

button.control_button {
  display: block;
  /*position: absolute;*/
  width: 18%;
  height: 50%;
  border: none;
  outline: none;
  cursor: pointer;
  border-radius: 5.5vh;
  transition: .3s ease;

  font-family: 'Secular One', sans-serif;
  font-size: 2vh;
  text-align: center;
  line-height: 2.1em;
  color: white;
}
button.control_button:hover {
  box-shadow: 0 0 6px rgb(0,0,0,.5);
}

.guess_button {
  opacity: 1;
  background-color: #2EAEF2;
  pointer-events: auto;
  margin-left: 2%;
  margin-right: 2%;
}

button.inactive {
  opacity: .5;
  pointer-events: none;
}

.move_button {
  opacity: 1;
  background-color: #2EAEF2;
  pointer-events: auto;
}


@media screen and (max-width: 800px) {
  .bar_and_button_master {position: relative; height: 150px;}
  .animated_number_going_up_parent {height: 36px;}
  .animated_number_going_up {font-size: 24px;}
  .guess_bar_parent {height: 30px;}
  .guess {font-size: 16px; line-height: 28px; border-radius: 15px;}
  .guess_letter {font-size: 4.3vw;}
  .guess_button_parent {height: 90px;}
  .button.control_button {font-size: 16px; width: 99px; height: 45px; border-radius: 23px;}
  .button.control_button:hover {box-shadow: none;}
}

